--- a/Papers/FEDCIS-2023-presentation/sections/motivation.tex
+++ b/Papers/FEDCIS-2023-presentation/sections/motivation.tex
@@ -44,3 +44,18 @@
 	\end{itemize}
 
 \end{frame}
+
+\begin{frame}
+	\frametitle{C-=-1}
+
+	\begin{itemize}
+		\item General purpose, compiled research programming language with manual memory management
+		\item Built around powerful static metaprogramming features
+		\item Arbitrary code can be executed at compile time\begin{itemize}
+			\item Inspect the code base and report diagnostics
+			\item Modify the program before it is translated to machine code
+			\item Access the file system and external tools
+		\end{itemize}
+	\end{itemize}
+
+\end{frame}
