more presentation stuff

--- a/Papers/FEDCIS-2023-presentation/sections/C-=-1.tex
+++ b/Papers/FEDCIS-2023-presentation/sections/C-=-1.tex
@@ -1,1 +1,22 @@
 \section{C-=-1}
+
+\begin{frame}
+    \frametitle{Type System}
+
+    
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Semantic model}
+
+    
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Compiler structure}
+
+    
+
+\end{frame}
