--- a/Papers/FEDCIS-2023-presentation/sections/CTFEF.tex
+++ b/Papers/FEDCIS-2023-presentation/sections/CTFEF.tex
@@ -16,13 +16,13 @@
     \frametitle{Frontend}
 
     \begin{itemize}
-        \item Translates source code into Intermidiate Representation\begin{itemize}
+        \item Translates source code into Intermediate Representation\begin{itemize}
             \item Parse
             \item Validate syntax
             \item Inline operators with special syntax (ex: \lstinline|typeof|)
         \end{itemize}
-        \item Processes user code and Compiler Interface\begin{itemize}
-            \item Compiler interface translates user code into backend Intermidiate Representation
+        \item Processes user code and Compiler Interface \begin{itemize}
+            \item Compiler Interface translates user code into backend Intermediate Representation
         \end{itemize}
         \item May perform additional processing\begin{itemize}
             \item In C-=-1 it invokes the interpreter to execute metaprogramming code
@@ -32,7 +32,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Intermidiate Representation}
+    \frametitle{Intermediate Representation}
 
     \begin{itemize}
         \item Complete representation of the user program
@@ -52,7 +52,7 @@
     \frametitle{Interpreter}
 
     \begin{itemize}
-        \item Operates on Intermidiate Representation 
+        \item Operates on Intermediate Representation 
         \item Uses the same data structures for code and data
         \item Allows executing arbitrary code \begin{itemize}
             \item In practice some operations make sens only at runtime
