more presentation stuff

--- a/Papers/FEDCIS-2023-presentation/cm1.tex
+++ b/Papers/FEDCIS-2023-presentation/cm1.tex
@@ -93,8 +93,8 @@ backgroundcolor=\color{white},
 \title{CTFEF }
 \subtitle{Building a compiler for metaprogramming languages}
 \author[name]{
-	mgr. inż. Adam Grabski\\
-	dr. hab. inż Ilona Bluemke
+	Adam Grabski\\
+	Ilona Bluemke
 }
 
 \institute[uni]{ Department of Electronics and Information Technology \\
@@ -106,7 +106,7 @@ Warsaw Univeristy of Technology
 
 \maketitle
 }%This is the colour of the first slide. bg= background and fg=foreground
-
+\AtBeginSection{}
 
 \begin{frame}{Agenda}
 	\setbeamertemplate{section in toc}[sections numbered] %This is numbering the sections
@@ -116,5 +116,6 @@ Warsaw Univeristy of Technology
 \input{sections/motivation.tex}
 \input{sections/CTFEF.tex}
 \input{sections/C-=-1.tex}
+\input{sections/Conclusions.tex}
 
 \end{document}
