--- a/Papers/FEDCIS-2023-presentation/sections/motivation.tex
+++ b/Papers/FEDCIS-2023-presentation/sections/motivation.tex
@@ -2,7 +2,7 @@
 
 
 \begin{frame}
-	\frametitle{Metaprogramming}
+	\frametitle{Motivation}
 
 	\begin{itemize}
 		\item Metaprogramming - writing programs that analyse or modify themselves\begin{itemize}
