final version of fedcis presentation?

--- a/Papers/FEDCIS-2023-presentation/cm1.tex
+++ b/Papers/FEDCIS-2023-presentation/cm1.tex
@@ -97,10 +97,11 @@ backgroundcolor=\color{white},
 	Ilona Bluemke
 }
 
-\institute[uni]{ Department of Electronics and Information Technology \\
+\institute[uni]{Institute of Computer Science \\
+Department of Electronics and Information Technology \\
 Warsaw Univeristy of Technology
 }
-\date{\today} %Here you can change the date
+\date{September 18, 2023} %Here you can change the date
 \begin{document}
 {
 
