--- a/Papers/FEDCIS-2023-presentation/sections/motivation.tex
+++ b/Papers/FEDCIS-2023-presentation/sections/motivation.tex
@@ -15,7 +15,7 @@
 		\item Mostly present in garbage-collected languages at runtime\begin{itemize}
 			      \item C\#
 			      \item Java
-			      \item Scripting languages such as Javscript or python
+			      \item Scripting languages such as Javscript or Python
 		      \end{itemize}
 	\end{itemize}
 
